# membrid-rs

./: AGENTS.md  Cargo.toml  README.md  deny.toml  plan.md
.github/workflows/: auto-version-tag.yml  ci.yml  dependency-review.yml  dependency-submission.yml  release.yml
docs/: api-design.md  automation-guidelines.md  embedding-context.md  implementation.md  integration.md  memory-taxonomy.md  problem-statement.md  roadmap.md  storage-architecture.md
examples/: working_memory_demo.rs
src/: error.rs  lib.rs  types.rs
src/arrow/: convert.rs  mod.rs
src/audit/: mod.rs
src/context/: mod.rs
src/embedding/: mod.rs
src/entity/: mod.rs
src/memory/: working.rs
src/ops/: mod.rs
src/storage/: memory.rs  mod.rs
